--- a/low/_utilities.scss
+++ b/low/_utilities.scss
@@ -374,7 +374,7 @@ $utilities: (
             url: "https://developer.mozilla.org/en-US/docs/Web/CSS/flex-grow",
             description: "Utilities for setting the flex-grow property of the element.",
         ),
-        classname: null,
+        classname: "grow",
         variants: internal.list-from("default", "responsive"),
         properties: internal.list-from(flex-grow),
         theme: internal.list-from("flex-grow"),
@@ -386,7 +386,7 @@ $utilities: (
             url: "https://developer.mozilla.org/en-US/docs/Web/CSS/flex-shrink",
             description: "Utilities for setting the flex-shrink property of the element.",
         ),
-        classname: null,
+        classname: "shrink",
         variants: internal.list-from("default", "responsive"),
         properties: internal.list-from(flex-shrink),
         theme: internal.list-from("flex-shrink"),
